# pufferfish

./: .gitignore  FUNDING.yml  README.md  angular.json  build.config.json  electron-builder.json  jest.config.js  karma-ci.conf.js  karma.conf.js  package-lock.json  package.json  tsconfig-serve.json
.github/workflows/: main.yml
buildSystem/: buildEXE.js  clean.js
buildSystem/resources/: Builders.js  helpers.js  parsers.js
e2e/src/: app.e2e-spec.ts
src/: index.html
src-backend/: main.ts
src-backend/core/: App.ts
src-backend/exeBridge/: EXEBridge.ts
src-backend/ipc/: IpcController.ts
src-backend/ipc/IPCButton/: IPCButton.ts
src-backend/test/: main.spec.ts
src-exe/hello-world/: .gitignore  Cargo.toml  config.json
src-exe/hello-world/src/: main.rs
src-exe/thread-count/: config.json  package-lock.json  package.json
src-exe/thread-count/lib/: index.js
src-exe/thread-count/native/: Cargo.toml  build.rs
src-exe/thread-count/native/src/: lib.rs
src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/pages/index/: index.component.html  index.component.scss  index.component.ts
src/app/services/: backend.service.ts
src/app/services/electron-parent/: electron-parent.ts
