[package]
name = "thread-count"
version = "0.1.0"
authors = ["Tucker Hawkinson <hawkinson.tucker@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "thread_count"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
num_cpus = "1.4.0"
